updated database.js routes

--- a/src/index.html
+++ b/src/index.html
@@ -106,10 +106,10 @@
     <script src="./js/modules/database.js" type="module"></script>
 
     <!--Component Files-->
-    <script src="./components/homepage.js" type="module"></script>
-    <script src="./components/category.js" type="module"></script>
-    <script src="./components/mainpage.js" type="module"></script>
-    <script src="./components/slideshow.js" type="module"></script>
+    <script src="./js/components/homepage.js" type="module"></script>
+    <script src="./js/components/category.js" type="module"></script>
+    <script src="./js/components/mainpage.js" type="module"></script>
+    <script src="./js/components/slideshow.js" type="module"></script>
 
 </body>
 
